--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
         run: flutter pub get
 
       - name: Build web
-        # run: flutter build web --release --base-href "/quiz_games/"
-        run: flutter build web --release
+        run: flutter build web --release --base-href "/quiz_games/"
+        # run: flutter build web --release
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
