--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy Flutter Web to GitHub Pages
 on:
   push:
     branches:
-      - release  # Trigger only on release branch
+      - release # Trigger only on release branch
 
 jobs:
   build-deploy:
@@ -25,7 +25,7 @@ jobs:
         run: flutter pub get
 
       - name: Build web
-        run: flutter build web --release --base-href "/quiz_games/"
+        run: flutter build web --release --base-href "/quiz_game/"
         # run: flutter build web --release
 
       - name: Deploy to GitHub Pages
